# os-ex3

./: .gitignore  CMakeLists.txt  ExecMap.cpp  ExecMap.h  ExecReduce.cpp  ExecReduce.h  Makefile  Manager.cpp  Manager.h  MapManager.cpp  MapManager.h  MapReduceClient.cpp  MapReduceFramework.cpp  README  Search-original.cpp  Search.cpp  Search.h  SearchDefinitions.cpp  Shuffle.cpp  Shuffle.h  StringCount.cpp  StringCount.h  log  main.cpp  questions.docx
Debug/: Search
benben/: MapReduceFramework.cpp
